[package]
name = "network-handler"
version = "0.3.0"
edition = "2021"
categories = ["network-programming"]
publish = ["forgejo-code-rust"]
repository = "https://github.com/C0D3-M4513R/network-handler"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
# The `maintenance` table indicates the status of the maintenance of
# the crate. This may be used by a registry, but is currently not
# used by crates.io. See https://github.com/rust-lang/crates.io/issues/2437
# and https://github.com/rust-lang/crates.io/issues/2438 for more details.
#
# The `status` field is required. Available options are:
# - `actively-developed`: New features are being added and bugs are being fixed.
# - `passively-maintained`: There are no plans for new features, but the maintainer intends to
#   respond to issues that get filed.
# - `as-is`: The crate is feature complete, the maintainer does not intend to continue working on
#   it or providing support, but it works for the purposes it was designed for.
# - `experimental`: The author wants to share it with the community but is not intending to meet
#   anyone's particular use case.
# - `looking-for-maintainer`: The current maintainer would like to transfer the crate to someone
#   else.
# - `deprecated`: The maintainer does not recommend using this crate (the description of the crate
#   can describe why, there could be a better solution available or there could be problems with
#   the crate that the author does not want to fix).
# - `none`: Displays no badge on crates.io, since the maintainer has not chosen to specify
#   their intentions, potential crate users will need to investigate on their own.
maintenance = { status = "passively-maintained" }

[dependencies]
#OSC library
rosc = { version = "0.11.4", default-features = false , optional = true }
nom = { version = "7", default-features = false, optional = true }
#logging
log = "0.4"
#Sorted vec according to a timestamp.
#This is used to sort to be applied bundles according to their timestamps.
#This theoretically speeds up checking what bundles to apply, since it can now
#find the bundles to apply in O(log n) instead of O(n). (binary search instead checking every bundle)
time = { version = "0.3", optional = true }
sorted-vec = { version = "0.8", optional = true }

[features]
default = ["alloc"]
alloc = []
osc = ["alloc", "dep:nom", "dep:rosc", "dep:time", "dep:sorted-vec"]
debug_log = []